Fixing error with api key path